# eduforge-backend

./: .env  README.md  main.py  pyproject.toml
app/: main.py
app/api/: lesson_plan.py  routes_auth.py  routes_questions.py
app/core/: __init__.py  config.py  region_loader.py  security.py
app/models/: lesson_plan.py  lesson_plan_model.py
app/regions/: ghana.json  kenya.json  nigeria.json  southafrica.json
app/services/: ai_generator.py  ai_lesson_plan_generator.py  ministry_data_service.py
app/utils/: __init__.py  ai_client.py  date_utils.py
